--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "kotlin": "^1.3.11"
   },
   "devDependencies": {
-    "mocha": "^5.2.0",
-    "output": "file:build/resources/main/"
+    "kotlin-test": "^1.3.11",
+    "mocha": "^5.2.0"
   }
 }
