--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "build/web/output.js",
   "scripts": {
-    "start": "node build/web/output.js",
-    "test": "node build/resources/test/full_test.js"
+    "start": "node build/js/testinggrounds-kotlinjs-react-node.js",
+    "test": "node node_modules/jasmine/bin/jasmine.js build/jstest"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,7 @@
     "kotlin": "^1.3.11"
   },
   "devDependencies": {
-    "kotlin-test": "^1.3.11",
-    "mocha": "^5.2.0"
+    "jasmine": "^3.3.1",
+    "kotlin-test": "^1.3.11"
   }
 }
