--- a/be-gradle/package.json
+++ b/be-gradle/package.json
@@ -5,7 +5,7 @@
   "main": "build/web/output.js",
   "scripts": {
     "start": "node build/js/testinggrounds-kotlinjs-react-node.js",
-    "test": "node node_modules/jasmine/bin/jasmine.js build/jstest"
+    "test": "npx jasmine build/jstest"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,6 @@
     "kotlin": "^1.3.11"
   },
   "devDependencies": {
-    "jasmine": "^3.3.1",
     "kotlin-test": "^1.3.11"
   }
 }
